[package]
name = "sheep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
  "builder", "cache", "client", "gateway",
  "http", "model", "utils", "rustls_backend"
  ]


[dependencies.tokio]
version = "1.21"
features = ["rt-multi-thread"]